--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#008577</color>
-    <color name="color_primary_dark">#00574B</color>
-    <color name="color_accent">#D81B60</color>
-    <color name="gray_light">#999999</color>
+    <color name="color_primary">#2A1956</color>
+    <color name="color_primary_dark">#1C0E42</color>
+    <color name="color_accent">#FC4C4C</color>
+    <color name="color_gray">#9CA9BA</color>
+    <color name="color_gray_light">#ECECEC</color>
+    <color name="color_gray_dark">#675F7F</color>
 
 </resources>
