--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
                 android:layout_width="@dimen/image_button_size"
                 android:layout_height="@dimen/image_button_size"
                 android:src="@drawable/ic_send_white_24dp"
-            android:id="@+id/id_send"
+            android:id="@+id/iv_send"
             android:layout_gravity="center"
             android:layout_marginRight="@dimen/spacing_normal_16" />
     </LinearLayout>
