--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -36,12 +36,15 @@
                 android:background="@drawable/btn_round_bg"
                 android:src="@drawable/ic_switch_day_night" />
 
-            <ImageView
+
+            <ru.skillbranch.devintensive.ui.profile.custom.CircleImageView
                 android:id="@+id/iv_avatar"
                 android:layout_width="@dimen/avatar_round_size"
                 android:layout_height="@dimen/avatar_round_size"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/avatar_default" />
+                android:src="@drawable/avatar_default"
+                app:cv_borderColor="?attr/colorAccentedSurface"
+                app:cv_borderWidth="2dp" />
 
             <ImageButton
                 android:id="@+id/btn_edit"
