--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,7 +7,11 @@
         <attr name="cv_borderColor" format="color" />
         <attr name="cv_borderWidth" format="dimension" />
     </declare-styleable>
-
+    <declare-styleable name="AvatarImageView">
+        <attr name="aiv_borderColor" format="color" />
+        <attr name="aiv_borderWidth" format="dimension" />
+        <attr name="aiv_initials" format="string" />
+    </declare-styleable>
 
     <attr name="colorAccentedSurface" format="reference" />
     <attr name="colorDivider" format="reference" />
