--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ru.skillbranch.devintensive.ui.profile.custom.AspectRatioImageView
+        <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -37,14 +37,14 @@
                 android:src="@drawable/ic_switch_day_night" />
 
 
-            <ru.skillbranch.devintensive.ui.profile.custom.CircleImageView
+            <ru.skillbranch.devintensive.ui.custom.CircleImageView
                 android:id="@+id/iv_avatar"
                 android:layout_width="@dimen/avatar_round_size"
                 android:layout_height="@dimen/avatar_round_size"
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/avatar_default"
                 app:cv_borderColor="?attr/colorAccentedSurface"
-                app:cv_borderWidth="2dp" />
+                app:cv_borderWidth="5dp" />
 
             <ImageButton
                 android:id="@+id/btn_edit"
