--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -37,14 +37,12 @@
                 android:src="@drawable/ic_switch_day_night" />
 
 
-            <ru.skillbranch.devintensive.ui.custom.CircleImageView
+            <ImageView
                 android:id="@+id/iv_avatar"
                 android:layout_width="@dimen/avatar_round_size"
                 android:layout_height="@dimen/avatar_round_size"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/avatar_default"
-                app:cv_borderColor="?attr/colorAccentedSurface"
-                app:cv_borderWidth="5dp" />
+                android:src="@drawable/avatar_default" />
 
             <ImageButton
                 android:id="@+id/btn_edit"
